istio/overlays/dev/grafana-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: istio-system
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["grafana.audryus.arpa"]
  rules:
    - matches:
      - headers:
          - name: X-Forwarded-Proto
            value: http
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          port: 443
      backendRefs:
      - name: grafana
        weight: 1
        port: 3000
    - backendRefs:
      - name: grafana
        weight: 1
        port: 3000
