istio/overlays/dev/jaeger-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jaeger
  namespace: istio-system
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  hostnames: ["jaeger.audryus.arpa"]
  rules:
    - matches:
      - headers:
          - name: X-Forwarded-Proto
            value: http
      filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          port: 443
      backendRefs:
      - name: tracing
        weight: 1
        port: 80
    - backendRefs:
      - name: tracing 
        weight: 1
        port: 80
